--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@ div{
     border: 1px ridge rgba(255, 255, 255, 0.3);
     border-radius: 8px;
     text-shadow: 2px;
-    font-family: 'Abril Fatface', cursive;;
+    font-family: 'Abril Fatface', cursive;
 
 }
 
@@ -22,7 +22,7 @@ p{
     font-size:15px;
     line-height:18px;
 
-    font-family:'Abhaya Libre', serif;;
+    font-family:'Abhaya Libre', serif;
 
 }
 
